--- a/catalog/view/theme/default/template/extension/payment/frisbee.twig
+++ b/catalog/view/theme/default/template/extension/payment/frisbee.twig
@@ -1,12 +1,12 @@
-{% if frisbee_data.message %}
+{% if frisbee.message %}
     <div class="alert alert-warning">
-        {{ frisbee_data.message }}
+        {{ frisbee.message }}
         <button type="button" class="close" data-dismiss="alert">×</button>
     </div>
 {% else %}
     <div class="buttons">
         <div class="pull-right">
-            <a href="{{ frisbee_data.url }}" class="btn btn-primary">{{ button_confirm }}</a>
+            <a href="{{ frisbee.url }}" class="btn btn-primary">{{ button_confirm }}</a>
         </div>
     </div>
 {% endif %}
