--- a/admin/view/template/extension/payment/frisbee.twig
+++ b/admin/view/template/extension/payment/frisbee.twig
@@ -128,6 +128,14 @@
                             </select>
                         </div>
                     </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">{{ entry_title }}</label>
+                        <div class="col-sm-10">
+                            <input type="text" name="payment_frisbee_title" value="{{ payment_frisbee_title }}"
+                                   class="form-control"/>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
