--- a/admin/view/template/extension/payment/frisbee.twig
+++ b/admin/view/template/extension/payment/frisbee.twig
@@ -7,7 +7,7 @@
                         class="btn btn-primary"><i class="fa fa-save"></i></button>
                 <a href="{{ cancel }}" data-toggle="tooltip" title="{{ button_cancel }}" class="btn btn-default"><i
                             class="fa fa-reply"></i></a></div>
-            <h1><img src="view/image/payment/frisbee.png" style="height:25px; margin-top:-5px;"/> {{ heading_title }}
+            <h1><img src="view/image/payment/frisbee.svg" style="height:25px; margin-top:-5px;"/> {{ heading_title }}
             </h1>
             <ul class="breadcrumb">
                 {% for breadcrumb in breadcrumbs %}
